Cambios por Jose Chuchuca

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,24 @@
     <string name="app_name">PST_TA6_G2</string>
     <string name="fef">FEF</string>
     <string name="title_activity_inicio">Inicio</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Resultados</string>
-    <string name="title_notifications">Tabla de Posiciones</string>
+    <string name="title_home">Fecha 17</string>
+    <string name="title_dashboard">Fecha 18</string>
+    <string name="title_notifications">Fecha 19</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_principal">Principal</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">FEF</string>
+    <string name="nav_header_subtitle">clopez@mail.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Cerrar Sesión</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Resultados</string>
+    <string name="menu_slideshow">Tabla de Posiciones</string>
+    <string name="menu_tools">Perfil</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 </resources>
