Perfil de votaciones listo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,14 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">FEF</string>
-    <string name="nav_header_subtitle">clopez@mail.com</string>
+    <string name="nav_header_subtitle">aalcivar@mail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Cerrar Sesión</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Resultados</string>
     <string name="menu_slideshow">Tabla de Posiciones</string>
-    <string name="menu_tools">Perfil</string>
+    <string name="menu_tools">Votaciones</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
 </resources>
